--- a/packages/fluent/scss/pager/_layout.scss
+++ b/packages/fluent/scss/pager/_layout.scss
@@ -5,10 +5,9 @@
 
 @mixin kendo-pager--layout() {
 
-    .k-pager-wrap,
     .k-pager {
-        padding-inline: var( --kendo-pager-padding-x, #{$kendo-pager-padding-x} );
-        padding-block: var( --kendo-pager-padding-y, #{$kendo-pager-padding-y} );
+        padding-inline: var( --INTERNAL--kendo-pager-padding-x, 0 );
+        padding-block: var( --INTERNAL--kendo-pager-padding-y, 0 );
         border-width: var( --kendo-pager-border-width, #{$kendo-pager-border-width} );
         border-style: solid;
         box-sizing: border-box;
@@ -19,6 +18,7 @@
         white-space: nowrap;
         display: flex;
         align-items: center;
+        gap: var( --INTERNAL--kendo-pager-spacing, 0 );
         position: relative;
         overflow: hidden;
         cursor: default;
@@ -30,19 +30,6 @@
         *::before,
         *::after {
             box-sizing: border-box;
-        }
-
-        .k-link {
-            text-decoration: none;
-            outline: 0;
-            font: inherit;
-            background-color: inherit;
-
-            // Focused state
-            &:focus,
-            &.k-focus {
-                z-index: 3;
-            }
         }
 
         .k-rtl &,
@@ -69,10 +56,6 @@
 
     // Base pager section
     %base-pager-section {
-        @if ($kendo-pager-section-spacing) {
-            margin-inline-start: var( --kendo-pager-section-spacing, #{$kendo-pager-section-spacing} );
-            margin-inline-end: var( --kendo-pager-section-spacing, #{$kendo-pager-section-spacing} );
-        }
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -81,8 +64,6 @@
 
     // Base pager item
     %base-pager-item {
-        min-width: var( --kendo-button-calc-size, #{$kendo-button-calc-size} );
-        height: var( --kendo-button-calc-size, #{$kendo-button-calc-size} );
         color: inherit;
         text-align: center;
         display: inline-flex;
@@ -100,10 +81,6 @@
     .k-pager-nav {
         @extend %base-pager-item;
         @include border-radius( var( --kendo-pager-item-border-radius, #{$kendo-pager-item-border-radius} ) );
-        padding-inline: var( --kendo-pager-item-padding-x, #{$kendo-pager-item-padding-x} );
-        padding-block: var( --kendo-pager-item-padding-y, #{$kendo-pager-item-padding-y} );
-        border-width: var( --kendo-pager-item-border-width, #{$kendo-pager-item-border-width} );
-        border-style: solid;
     }
 
 
@@ -119,31 +96,21 @@
         }
     }
     .k-pager-numbers {
-        margin: 0;
-        padding: 0;
-        list-style: none;
         display: flex;
         flex-direction: row;
-
-        li {
-            display: inline-flex;
-        }
-
-        // Links
-        .k-link {
-            @extend %base-pager-item;
-            @include border-radius( var( --kendo-pager-number-border-radius, #{$kendo-pager-number-border-radius} ) );
-            padding-inline: var( --kendo-pager-number-padding-x, #{$kendo-pager-number-padding-x} );
-            padding-block: var( --kendo-pager-number-padding-y, #{$kendo-pager-number-padding-y} );
-            border-width: var( --kendo-pager-number-border-width, #{$kendo-pager-number-border-width} );
-            border-style: solid;
-            font-weight: var( --kendo-pager-number-font-weight, #{$kendo-pager-number-font-weight} );
-        }
 
         // Selected state
         .k-selected {
             cursor: inherit;
             z-index: 2;
+        }
+
+        .k-button {
+            --INTERNAL--kendo-button-padding-x: var( --INTERNAL--kendo-button-padding-y );
+
+            .k-button-text {
+                min-width: calc( var( --kendo-line-height ) * 1em );
+            }
         }
     }
 
@@ -151,8 +118,7 @@
     // Spacing between items
     .k-pager-nav + .k-pager-nav,
     .k-pager-nav + .k-pager-numbers-wrap,
-    .k-pager-numbers-wrap + .k-pager-nav,
-    .k-pager-numbers > li + li {
+    .k-pager-numbers-wrap + .k-pager-nav {
         @if ($kendo-pager-item-spacing) {
             margin-inline-start: var( --kendo-pager-item-spacing, #{$kendo-pager-item-spacing} );
         }
@@ -206,35 +172,46 @@
     }
 
     // Responsive
-    .k-pager-sm {
+    .k-pager-mobile-sm {
         overflow: visible;
 
         // Show native select
         .k-pager-numbers-wrap {
             select.k-dropdown-list {
+                @extend %base-pager-section;
+                @if ($kendo-pager-section-spacing) {
+                    margin-left: $kendo-pager-section-spacing;
+                    margin-right: $kendo-pager-section-spacing;
+                }
                 width: var( --kendo-pager-dropdown-width, #{$kendo-pager-dropdown-width} );
-                display: flex;
             }
         }
-
-        .k-pager-numbers-wrap {
-            @if ($kendo-pager-section-spacing) {
-                margin-inline-start: var( --kendo-pager-section-spacing, #{$kendo-pager-section-spacing} );
-                margin-inline-end: var( --kendo-pager-section-spacing, #{$kendo-pager-section-spacing} );
-            }
-
-            height: var( --kendo-button-calc-size, #{$kendo-button-calc-size} );
-            border-color: inherit;
-        }
-
     }
 
     // Hide components
-    .k-pager-md .k-pager-info,
-    .k-pager-sm .k-pager-info,
-    .k-pager-sm .k-pager-sizes,
-    .k-pager-sm .k-pager-numbers {
+    .k-pager-mobile-md .k-pager-info,
+    .k-pager-mobile-sm .k-pager-info,
+    .k-pager-mobile-sm .k-pager-sizes,
+    .k-pager-mobile-sm .k-pager-numbers {
         display: none;
+    }
+
+    // Pager sizes
+    @each $size, $size-props in $kendo-pager-sizes {
+        $_padding-x: map-get($size-props, padding-x);
+        $_padding-y: map-get($size-props, padding-y);
+        $_item-group-spacing: map-get($size-props, item-group-spacing);
+
+        .k-pager-#{$size} {
+            --INTERNAL--kendo-pager-padding-x: var( --kendo-pager-#{$size}-padding-x, #{$_padding-x} );
+            --INTERNAL--kendo-pager-padding-y: var( --kendo-pager-#{$size}-padding-y, #{$_padding-y} );
+            --INTERNAL--kendo-pager-spacing: var( --kendo-pager-#{$size}-spacing, #{$_item-group-spacing} );
+
+            .k-pager-input {
+                margin-inline-start: var( --kendo-pager-input-margin-start, #{$_item-group-spacing} );
+                margin-inline-end: var( --kendo-pager-input-margin-end, #{$_item-group-spacing} );
+            }
+        }
     }
 
 }
