--- a/packages/core/scss/functions/index.import.scss
+++ b/packages/core/scss/functions/index.import.scss
@@ -1,6 +1,7 @@
 @import "_color.import.scss";
 @import "_color-contrast.import.scss";
 @import "_color-manipulation.import.scss";
+@import "_custom-properties.import.scss";
 @import "_list.import.scss";
 @import "_math.import.scss";
 @import "_map.import.scss";
