--- a/packages/nouvelle/scss/actions/_theme.scss
+++ b/packages/nouvelle/scss/actions/_theme.scss
@@ -1,4 +1,16 @@
-@mixin kendo-actions--theme() {}
+@mixin kendo-actions--theme() {
+
+    .k-actions {
+        --INTERNAL--kendo-actions-bg: var( --kendo-actions-bg, #{$kendo-actions-bg} );
+        --INTERNAL--kendo-actions-text: var( --kendo-actions-text, #{$kendo-actions-text} );
+        --INTERNAL--kendo-actions-border: var( --kendo-actions-border, #{$kendo-actions-border} );
+
+        border-color: var( --INTERNAL--kendo-actions-border, transparent );
+        color: var( --INTERNAL--kendo-actions-color, inherit );
+        background-color: var( --INTERNAL--kendo-actions-bg, transparent );
+    }
+
+}
 
 
 
